--- a/d03/ex03/Makefile
+++ b/d03/ex03/Makefile
@@ -2,7 +2,7 @@ NAME = a.out
 
 SRCS = main.cpp ClapTrap.cpp ScavTrap.cpp FragTrap.cpp DiamondTrap.cpp
 
-FLAGS = -Wall -Wextra -Werror
+FLAGS = -Wall -Wextra -Werror -Wshadow
 
 all : $(NAME)
 
